--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -22,17 +22,30 @@ body {
   background-color: rgba(0, 0, 0, 0.4);
   border: black 0.4rem solid;
   border-radius: 0.5rem;
-  color: yellow;
   font-size: 1.5rem;
   margin: 1rem;
   padding: 1rem 0.5rem;
   text-align: center;
   text-shadow: 0 0 0.5rem black;
+  transition: all 0.07s;
   width: 10rem;
+}
+
+.playing {
+  transform: scale(1.1);
+  border-color: hotpink;
+  box-shadow: 0 0 10px hotpink;
 }
 
 kbd {
   display: block;
   color: white;
   font-size: 4rem;
+}
+
+.sound {
+  color: hotpink;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
