--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -1,3 +1,47 @@
+html {
+  background: #ffc600;
+  box-sizing: border-box;
+  font-family: "helvetica neue";
+  font-size: 20px;
+  font-weight: 200;
+}
+
+body {
+  margin: 0;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+.panels {
+  display: flex;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.panel {
+  /* aligning */
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  /* dom */
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
+  /* style */
+  background: #6b0f9c;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
+  color: white;
+  font-size: 20px;
+}
+
 /* images */
 .panel1 {
   background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
@@ -13,4 +57,52 @@
 }
 .panel5 {
   background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
+}
+
+/* Flex Children */
+.panel > * {
+  /* aligning */
+  align-items: center;
+  display: flex;
+  flex: 1 0 auto;
+  justify-content: center;
+  text-align: center;
+  /* dom */
+  transition: transform 0.5s;
+  /* style */
+  border: 1px solid red;
+  margin: 0;
+  width: 100%;
+}
+
+.panel > *:first-child {
+  transform: translateY(-100%);
+}
+
+.panel.open-active > *:first-child {
+  transform: translateY(0);
+}
+
+.panel > *:last-child {
+  transform: translateY(100%);
+}
+
+.panel.open-active > *:last-child {
+  transform: translateY(0);
+}
+
+.panel p {
+  font-family: "Amatic SC", cursive;
+  font-size: 2em;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+  text-transform: uppercase;
+}
+
+.panel p:nth-child(2) {
+  font-size: 4em;
+}
+
+.panel.open {
+  flex: 5;
+  font-size: 40px;
 }
